--- a/styles/blogStyle.css
+++ b/styles/blogStyle.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Roboto+Flex:opsz@8..144&family=Rubik+Mono+One&family=Vollkorn&display=swap');
 
 :root {
     --light_orange: #F7AB3C;
@@ -29,11 +28,7 @@ body, html, #__next {
     overflow-x: hidden;
     color: white;
     min-height: 100vh;
-    background: rgb(31,20,41);
-    background: -moz-linear-gradient(193deg, rgba(31,20,41,1) 0%, rgba(0,0,0,1) 100%);
-    background: -webkit-linear-gradient(193deg, rgba(31,20,41,1) 0%, rgba(0,0,0,1) 100%);
-    background: linear-gradient(193deg, rgba(31,20,41,1) 0%, rgba(0,0,0,1) 150%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#1f1429",endColorstr="#000000",GradientType=1);
+    background: black;
 }
 
 header {
@@ -369,16 +364,14 @@ header h1 {
 }
 
 #articleView .article_image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 0 0 11px 11px;
-    opacity: 0.25;
-    transition: opacity .5s;
+    position: relative;
+    width: 25rem;
+    height: 20rem;
+    margin: 0;
+}
+
+#articleView .article_image span {
+    border-radius: 21px;
 }
 
 #articleView img, #userView img {
