--- a/styles/imageStyle.module.css
+++ b/styles/imageStyle.module.css
@@ -1,9 +1,14 @@
 .image {
-    filter: blur(2px);
+    filter: blur(5px);
     display: inline-block;
     mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0.854) 30%, #1e1428 100%);
     -webkit-mask-image: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, #ffffff9b 100%);
     user-select: none;
+}
+
+.articleImage {
+    display: inline-block;
+    border-radius: 15px !important;
 }
 
 .profileImage {
